--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -35,6 +35,10 @@ h1 ion-anchor {
     line-height: 1;
 }
 
+#item-password {
+    margin-top: 7px;
+}
+
 .link-esqueci-senha {
     color: #999;
     text-decoration: underline;
